force-app/main/default/objects/Site_Information_Activation_History__c/Site_Information_Activation_History__c.object-meta.xml
<CustomObject>
    <description>CJ: Created This Object To Store The Site Information Historical Activation Period and Occupied Floor Area</description>
    <label>Site Information Activation History</label>
    <nameField>
        <displayFormat>History-{0000}</displayFormat>
        <label>Site Information Activation History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Information Activation Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>