force-app/main/default/objects/Site_Information_Activation_History__c/fields/New_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Commencement_Date__c</fullName>
    <description>CJ: Created This Field For NZC Implementation, &lt;Release 8 Change Request&gt; Purpose: To Store the new commencement date of site information.</description>
    <label>New Commencement Date</label>
    <type>Date</type>
</CustomField>