force-app/main/default/objects/Site_Information_Activation_History__c/fields/Old_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Expiry_Date__c</fullName>
    <description>CJ: Created This Field For NZC Implementation, &lt;Release 8 Change Request&gt; Purpose: To Store the Expiry date of site information.</description>
    <label>Old Expiry Date</label>
    <type>Date</type>
</CustomField>