force-app/main/default/objects/Site_Information_Activation_History__c/fields/Old_Total_Lease_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Old_Total_Lease_Area_sqft__c</fullName>
    <description>CJ: Created This Field For NZC Implementation, &lt;Release 8 Change Request&gt; Purpose: To Store the Old Total Lease area of site information.</description>
    <label>Old Total Lease Area(sqft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>