force-app/main/default/objects/Site_Information_Activation_History__c/fields/Site_Information__c.field-meta.xml
<CustomField>
    <fullName>Site_Information__c</fullName>
    <description>CJ: Created This Field to relate the Site Information Master Record to child record</description>
    <label>Site Information</label>
    <referenceTo>StnryAssetEnvrSrc</referenceTo>
    <relationshipLabel>Site Information Activation Histories</relationshipLabel>
    <relationshipName>Site_Information_Activation_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>