force-app/main/default/objects/Site_Information_Activation_History__c/fields/Weighted_Average_Lease_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Lease_Area_sqft__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Old_Commencement_Date__c)),
        NOT(ISBLANK(Old_Expiry_Date__c)),
        NOT(ISBLANK(New_Commencement_Date__c)),
        NOT(ISBLANK(New_Expiry_Date__c)),
        VALUE(TEXT(Year__c)) &gt;= YEAR(Old_Commencement_Date__c),
        VALUE(TEXT(Year__c)) &lt;= YEAR(New_Expiry_Date__c)
    ),
    (
        (
            (MIN(
                MONTH(Old_Expiry_Date__c) + IF(YEAR(Old_Expiry_Date__c) = VALUE(TEXT(Year__c)), 0, 12),
                12
            ) -
            MAX(
                MONTH(Old_Commencement_Date__c) - IF(YEAR(Old_Commencement_Date__c) = VALUE(TEXT(Year__c)), 0, 12),
                1
            ) + 1) * Old_Total_Lease_Area_sqft__c 
        ) +
        (
            (MIN(
                MONTH(New_Expiry_Date__c) + IF(YEAR(New_Expiry_Date__c) = VALUE(TEXT(Year__c)), 0, 12),
                12
            ) -
            MAX(
                MONTH(New_Commencement_Date__c) - IF(YEAR(New_Commencement_Date__c) = VALUE(TEXT(Year__c)), 0, 12),
                1
            ) + 1) * New_Total_Lease_Area_sqft__c
        )
    ) /
    (
        (MIN(
            MONTH(Old_Expiry_Date__c) + IF(YEAR(Old_Expiry_Date__c) = VALUE(TEXT(Year__c)), 0, 12),
            12
        ) -
        MAX(
            MONTH(Old_Commencement_Date__c) - IF(YEAR(Old_Commencement_Date__c) = VALUE(TEXT(Year__c)), 0, 12),
            1
        ) + 1) +
        (MIN(
            MONTH(New_Expiry_Date__c) + IF(YEAR(New_Expiry_Date__c) = VALUE(TEXT(Year__c)), 0, 12),
            12
        ) -
        MAX(
            MONTH(New_Commencement_Date__c) - IF(YEAR(New_Commencement_Date__c) = VALUE(TEXT(Year__c)), 0, 12),
            1
        ) + 1)
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Average Lease Area(sqft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>