force-app/main/default/objects/Site_Information_Activation_History__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>CJ: Created for NZC Implementation, &lt;Release 8&gt; Purpose: To Store the Year value for which Weighted Averaged is calculated.</description>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>